Fixed horizontal scroll on home page

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ header{
 }
 
 .jobs-res{
-  padding:5vh;
+  padding:0;
   height: fit-content;
 }
 
@@ -151,7 +151,7 @@ header{
 
 .platform-title{
   font-size: 3vw;
-  width: 100vw;
+  width: 90vw;
   
 }
 
@@ -180,7 +180,7 @@ header{
 }
 
 footer{
-  width: 100vw;
+  width: 100%;
   height: 5vh;
   font-size: 2vh;
   text-align: center;
